5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1594_1806.log
== TEST (2019-03-28 18:35:09) 
-- CODE:
from math import *
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:36:40) 
-- CODE:
from math import *
v1 = factorial(365)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:36:48) 
-- CODE:
from math import *
v1 = factorial(365)
print(v1)
-- OUTPUT:
25104128675558732292929443748812027705165520269876079766872595193901106138220937419666018009000254169376172314360982328660708071123369979853445367910653872383599704355532740937678091491429440864316046925074510134847025546014098005907965541041195496105311886173373435145517193282760847755882291690213539123479186274701519396808504940722607033001246328398800550487427999876690416973437861078185344667966871511049653888130136836199010529180056125844549488648617682915826347564148990984138067809999604687488146734837340699359838791124995957584538873616661533093253551256845056046388738129702951381151861413688922986510005440943943014699244112555755279140760492764253740250410391056421979003289600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:37:29) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 

-- ERROR:
File "XXXX", line 4
    v2 = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:38:14) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v3)
v4 = 1/(365)**n

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v3 = factorial(v3)
NameError: name 'v3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:38:42) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v2)
v4 = 1/(365)**n
print(v4)

-- OUTPUT:
1.7884863361063957e-31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:48:09) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v2)
v4 = 1/(365)**n
print 1-(v1/v2)*v4 

-- ERROR:
File "XXXX", line 7
    print 1-(v1/v2)*v4 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:48:29) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v2)
v4 = 1/(365)**n
print = 1-(v1/v2)*v4 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print = 1-(v1/v2)*v4 
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:49:07) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v2)
v4 = 1/(365)**n
print = round((1-(v1/v2)*v4),2) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print = round((1-(v1/v2)*v4),2) 
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:51:34) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v2)
v4 = 1/(365)**n
print = round((1-(v1/v2)*v4),2) 


-- EXECUTION TIME:
0.121635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1806/main.py", line 7, in <module>
    print = round((1-(v1/v2)*v4),2) 
OverflowError: integer division result too large for a float

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:51:35) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v2)
v4 = 1/(365)**n
print = round((1-(v1/v2)*v4),2) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print = round((1-(v1/v2)*v4),2) 
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:05:11) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
p = 1 - ((factorial(365)/factorial(365-n))*(1/365**n)
print(round(p,2))
-- ERROR:
File "XXXX", line 4
    print(round(p,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:05:18) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
p = 1 - ((factorial(365)/factorial(365-n))*(1/365**n)
print(round(p,2))
-- ERROR:
File "XXXX", line 4
    print(round(p,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:05:19) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
p = 1 - ((factorial(365)/factorial(365-n))*(1/365**n)
print(round(p,2))
-- ERROR:
File "XXXX", line 4
    print(round(p,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:05:36) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
p = 1 - ((factorial(365)/factorial(365-n))*(1/365**n)
print(p)
-- ERROR:
File "XXXX", line 4
    print(p)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:06:15) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
p = (1 - ((factorial(365)/factorial(365-n))*(1/365**n)))
print(round(p,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:07:02) 
-- CODE:
from math import *
N = int(input("insira o valor de n: "))
n = n/100
p = (1 - ((factorial(365)/factorial(365-n))*(1/365**n)))
print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n = n/100
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:07:11) 
-- CODE:
from math import *
N = int(input("insira o valor de n: "))
n = N/100
p = (1 - ((factorial(365)/factorial(365-n))*(1/365**n)))
print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (1 - ((factorial(365)/factorial(365-n))*(1/365**n)))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:07:33) 
-- CODE:
from math import *
N = float(input("insira o valor de n: "))
n = N/100
p = (1 - ((factorial(365)/factorial(365-n))*(1/365**n)))
print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (1 - ((factorial(365)/factorial(365-n))*(1/365**n)))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:07:37) 
-- CODE:
from math import *
N = float(input("insira o valor de n: "))
n = N/100
p = (1 - ((factorial(365)/factorial(365-n))*(1/365**n)))
print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (1 - ((factorial(365)/factorial(365-n))*(1/365**n)))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:09:58) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v2)
v4 = 1/(365)**n
v5 = (v1/v2)*v4
v6 = 1-v5

print = round(v6,2) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    v5 = (v1/v2)*v4
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:10:24) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
v1 = factorial(365)
v2 = 365-n
v3 = factorial(v2)
v4 = 1/(365)**n
v5 = float((v1/v2)*v4)
v6 = 1-v5

print = round(v6,2) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    v5 = float((v1/v2)*v4)
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:16) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
P = 1 - (((factorial(365)/factorial(365-n))*(1/365**n)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    v5 = float((v1/v2)*v4)
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:56) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
P = 1 - (((factorial(365)/factorial(365-n))*(1/365**n)))
p = P*100
print(p)
-- OUTPUT:
16.70247888380645
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:28:22) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
P = 1 - (((factorial(365)/factorial(365-n))*(1/365**n)))
p = P*100
print(round(P,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:28:28) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
P = 1 - (((factorial(365)/factorial(365-n))*(1/365**n)))
p = P*100
print(round(p,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:28:31) 
-- CODE:
from math import *
n = int(input("insira o valor de n: "))
P = 1 - (((factorial(365)/factorial(365-n))*(1/365**n)))
p = P*100
print(round(p,2))
-- EXECUTION TIME:
0.138474
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
